resolvendo o overflow parcialmente

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,15 +1,4 @@
 // Section Home
-
-.home {
-    background-image: image-url("welcome.svg");
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    color: white;
-    width: 100vw;
-    height: 100vh;
-}
-
 @media screen and (min-device-width: 500px){ // para desktop
   .nav-top {
     font-size: 1.8em;
@@ -54,6 +43,20 @@
   .header-text {
     font-size: 2.5em;
   }
+}
+
+body {
+  overflow-x: hidden;
+}
+
+.home {
+    background-image: image-url("welcome.svg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    color: white;
+    width: 100vw;
+    height: 100vh;
 }
 
 .nav-top a:hover {
